--- a/sac.html
+++ b/sac.html
@@ -6,6 +6,7 @@
     <title>Processo BB - SAC</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
@@ -15,7 +16,7 @@
     <div class="container">
     <div class="col-xs-12">
             <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
-                <img class="backdrop linktree">
+                <img class="backdrop linktree-sac">
                 <h2 style="color: #ffffff; padding-top: 20px;">Olá, Colaborador(a)!</h2>
             </div>
     </div>
