--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div class="col-xs-12">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='./pr.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Pastor / Esposa</button>
+                    <button onclick="location.href='pr.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Pastor / Esposa</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='./sac.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Colaborador (SAC)</button>
+                    <button onclick="location.href='sac.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Colaborador (SAC)</button>
                 </div>
             </div>
     </div>
