--- a/pr.html
+++ b/pr.html
@@ -26,16 +26,16 @@
     <div class="col-xs-12">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='pastores/Manual-Básico-de-Operação-SAC-TUTORIAL-AOS-PASTORES.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Manual Básico de Operação - TUTORIAL AOS PASTORES</button>
+                    <button onclick="location.href='pastores/Manual-Básico-de-Operação-SAC-TUTORIAL-AOS-PASTORES.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Manual Básico de Operação</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='pastores/'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Acesso Login/Senha - CRM</button>
+                    <button onclick="location.href='pastores/acesso-crm-igrejas.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Acesso Login/Senha - CRM</button>
                 </div>                          
             </div>
     </div>
     </div>
 
-        <!-- Instruções Iniciais -->
+        <!-- Instruções Iniciais -->    
         <div class="container">
             <div class="col-xs-12">
                     <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
@@ -69,13 +69,13 @@
         <div class="col-xs-12">
                 <div class="text-center">
                     <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='pastores/orcamento-deve-conter.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Contatos - Empresas</button>
+                        <button onclick="location.href='pastores/contatos-empresas.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Contatos - Empresas</button>
                     </div>
                     <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='pastores/'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">O que um Orçamento deve Conter?</button>
+                        <button onclick="location.href='pastores/orcamento-deve-conter.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">O que um Orçamento deve Conter?</button>
                     </div>
                     <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='pastores/DOCUMENTOS-NECESSARIOS-PARA-AS-EMPRESAS.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Documentos Necessários para Contratação de Empresas</button>
+                        <button onclick="location.href='pastores/DOCUMENTOS-NECESSARIOS-PARA-AS-EMPRESAS.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Documentos Necessários</button>
                     </div>
                 </div>
         </div>
