--- a/pastores/contatos-empresas.html
+++ b/pastores/contatos-empresas.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style-contato-empresa.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
@@ -16,7 +16,7 @@
     <div class="container">
     <div class="col-xs-12">
             <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
-                <img class="backdrop linktree-empresa">
+                <img class="backdrop linktree">
                 <h2 style="color: #ffffff; padding-top: 20px;">Contatos - Empresas BB</h2>
             </div>
     </div>
