base-pe button added
update empresa-icon and base-pe button

--- a/pr.html
+++ b/pr.html
@@ -116,6 +116,24 @@
                 </div>
         </div>
         </div>
+        <!-- Serviços BASE/PE -->
+    <div class="container">
+        <div class="col-xs-12">
+                <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
+                    <h2 style="color: #ffffff; padding-top: 20px;">Serviços BASE/PE</h2>
+                </div>
+        </div>
+        </div>
+    
+        <div class="container">
+        <div class="col-xs-12">
+                <div class="text-center">
+                    <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://forms.gle/VWdqjNdJbxq9fd18A'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Solicite Pequenas Manutenções</button>
+                    </div>
+                </div>
+        </div>
+        </div>
     
     <!-- Head 2 -->
     <div class="container">
