--- a/pastores/contatos-empresas.html
+++ b/pastores/contatos-empresas.html
@@ -289,7 +289,7 @@
     <div class="container">
         <div class="col-xs-12">
                 <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
-                    <h2 style="color: #ffffff; padding-top: 20px;">vidraçaria</h2>
+                    <h2 style="color: #ffffff; padding-top: 20px;">Vidraçaria</h2>
                 </div>
         </div>
         </div>
