--- a/sac.html
+++ b/sac.html
@@ -48,10 +48,13 @@
         <div class="col-xs-12">
                 <div class="text-center">
                     <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='./fluxo-bb.html'" target="_blank" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Entenda Como Funciona o Processo BB</button>
+                        <button onclick="location.href='https://www.universal.org.br/codigodeetica/'" target="_blank" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Código de Ética - Universal</button>
                     </div>
                     <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='https://wa.me/558121014539'" target="_blank" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Central de Atendimento (SAC)</button>
+                        <button onclick="location.href='https://wa.me/5531994685003'" target="_blank" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Fale com o Gestor Manutenção-PE</button>
+                    </div>
+                    <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://wa.me/5519998544673'" target="_blank" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Fale com o ADM-PE</button>
                     </div>
                 </div>
         </div>
