--- a/estado-pr.html
+++ b/estado-pr.html
@@ -3,7 +3,7 @@
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     
-    <title>Processo BB - Manutenção PE</title>
+    <title>Processo BB - Manutenção</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8"/>
@@ -17,7 +17,7 @@
     <div class="col-xs-12">
             <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
                 <img class="backdrop linktree">
-                <h2 style="color: #ffffff; padding-top: 20px;">Bem-vindo(a)! Você é...</h2>
+                <h2 style="color: #ffffff; padding-top: 20px;">Em qual estado você está?</h2>
             </div>
     </div>
     </div>
@@ -26,10 +26,16 @@
     <div class="col-xs-12">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='pr.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Pastor / Esposa</button>
+                    <button onclick="location.href='pernambuco/pr-pe.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Pernambuco - PE</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='sac.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Colaborador (SAC)</button>
+                    <button onclick="location.href='paraiba/pr-pb.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Paraíba - PB</button>
+                </div>
+                <div style="padding-bottom: 30px;">
+                    <button onclick="location.href='rio-grande-do-norte/pr-rn.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Rio Grande do Norte - RN</button>
+                </div>
+                <div style="padding-bottom: 30px;">
+                    <button onclick="location.href='alagoas/pr-al.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Alagoas - AL</button>
                 </div>
             </div>
     </div>
