--- a/estado-sac.html
+++ b/estado-sac.html
@@ -17,7 +17,7 @@
     <div class="col-xs-12">
             <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
                 <img class="backdrop linktree">
-                <h2 style="color: #ffffff; padding-top: 20px;">Bem-vindo(a)! Você é...</h2>
+                <h2 style="color: #ffffff; padding-top: 20px;">Em qual estado você está?</h2>
             </div>
     </div>
     </div>
@@ -26,10 +26,16 @@
     <div class="col-xs-12">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='estado-pr.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Pastor / Esposa</button>
+                    <button onclick="location.href='pernambuco/sac-pe.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Pernambuco - PE</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='estado-sac.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Colaborador (SAC)</button>
+                    <button onclick="location.href='paraiba/sac-pb.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Paraíba - PB</button>
+                </div>
+                <div style="padding-bottom: 30px;">
+                    <button onclick="location.href='rio-grande-do-norte/sac-rn.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Rio Grande do Norte - RN</button>
+                </div>
+                <div style="padding-bottom: 30px;">
+                    <button onclick="location.href='alagoas/sac-al.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Alagoas - AL</button>
                 </div>
             </div>
     </div>
