--- a/pr-pe.html
+++ b/pr-pe.html
@@ -53,6 +53,9 @@
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='pastores-pe/servicos-autorizados.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Serviços Autorizados</button>
                         </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='pastores-pe/padrões-iurd.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Modelos Padrões - IURD</button>
+                        </div>
                     </div>
             </div>
             </div>
