--- a/pastores-pe/contatos-empresas.html
+++ b/pastores-pe/contatos-empresas.html
@@ -51,7 +51,10 @@
                             <button onclick="location.href='https://wa.me/558788515424?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Artec Climatização (Petrolina)</button>
                         </div>
                         <div style="padding-bottom: 30px;">
-                            <button onclick="location.href='https://wa.me/558189267671?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Refrigeral Climatizações (Goiana)</button>
+                            <button onclick="location.href='https://wa.me/5587991069196?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Alpes Refrigeração (Petrolina)</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558189267671?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Refrigeral Climatizações</button>
                         </div>
                     </div>
             </div>
@@ -94,16 +97,28 @@
                         <button onclick="location.href='https://wa.me/558185968818?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Alt's Engenharia</button>
                     </div>
                     <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='https://wa.me/558187301672?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Constrular Reformas</button>
+                        <button onclick="location.href='https://wa.me/558186922455?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">JK Caldeiraria</button>
                     </div>
                     <div style="padding-bottom: 30px;">
                         <button onclick="location.href='https://wa.me/558188543617?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Josenildo Barros</button>
+                    </div>
+                    <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://wa.me/558188594044?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Amós Unividros</button>
+                    </div>
+                    <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://wa.me/558796680923?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Construtora Estrela da Noite (Serra Talhada)</button>
+                    </div>
+                    <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://wa.me/5581991029427?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Gesso Pai e Filho</button>
                     </div>
                     <div style="padding-bottom: 30px;">
                         <button onclick="location.href='https://wa.me/558182276850?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Moreira Engenharia</button>
                     </div>
                     <div style="padding-bottom: 30px;">
                         <button onclick="location.href='https://wa.me/558185326685?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">RT Engenharia</button>
+                    </div>
+                    <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://wa.me/5581998153992?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Styllos Gesso</button>
                     </div>
                 </div>
         </div>
@@ -126,7 +141,13 @@
                             <button onclick="location.href='https://wa.me/558184132509?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Instante Saúde</button>
                         </div>
                         <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581987611319?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Igarassu Dedetização</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558197852552?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">SOS Dedetização</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558197274747?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">ZAP Cupim</button>
                         </div>
                     </div>
             </div>
@@ -142,6 +163,9 @@
             <div class="container">
             <div class="col-xs-12">
                     <div class="text-center">
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558186922455?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">JK Caldeiraria</button>
+                        </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558196795481?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Techsun Serviços</button>
                         </div>
@@ -160,13 +184,22 @@
             <div class="col-xs-12">
                     <div class="text-center">
                         <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558738630753?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Amorim Extintores</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558134316621?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Brasfogo Extintores</button>
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558134466444?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Braserv Extintores</button>
                         </div>
                         <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581991072003?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Pontual Serviços</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558796696149?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">PRL Extintores (Garanhuns)</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558738314729?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">J.A. Extintores (Serra Talhada)</button>
                         </div>
                     </div>
             </div>
@@ -204,6 +237,15 @@
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558186962979?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">José Lúcio</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558198490590?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">NJR Marcenaria</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558191179458?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Dedé Móveis</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581994361385?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Luan Móveis (Caruaru)</button>
                         </div>
                     </div>
             </div>
@@ -246,6 +288,12 @@
                             <button onclick="location.href='https://wa.me/558183078893?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Vanderlei Pintura</button>
                         </div>
                         <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558188594044?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Amós Unividros</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581994318600?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Edilson Belarmino</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558796063228?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">HD Pintura (Serra Talhada)</button>
                         </div>
                     </div>
@@ -262,6 +310,15 @@
             <div class="container">
             <div class="col-xs-12">
                     <div class="text-center">
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558186922455?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">JK Caldeiraria</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581986592589?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Robson Ricardo</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5587999004385?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Mr. Metal (Serra Talhada)</button>
+                        </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558191351747?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Luciano Albuquerque</button>
                         </div>
@@ -300,7 +357,16 @@
                         <button onclick="location.href='https://wa.me/558188594044?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Amós Unividros</button>
                     </div>
                     <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://wa.me/5581992739099?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Leart Vidraçaria</button>
+                    </div>
+                    <div style="padding-bottom: 30px;">
                         <button onclick="location.href='https://wa.me/558184237136?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">LM de Arruda</button>
+                    </div>
+                    <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://wa.me/5581996996305?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Vidraçaria Malaquias</button>
+                    </div>
+                    <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://wa.me/5581988726612?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">VMS Serviços</button>
                     </div>
                 </div>
         </div>
