--- a/pr-pe.html
+++ b/pr-pe.html
@@ -56,6 +56,9 @@
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='pastores-pe/padrões-iurd.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Modelos Padrões - IURD</button>
                         </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://web.microsoftstream.com/video/e928dd9a-6c08-4ecd-b93b-ecc7e6e17711?referrer=https:%2F%2Fatendimentouniversal.custhelp.com%2F'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Vídeoaula Tutorial</button>
+                        </div>
                     </div>
             </div>
             </div>
@@ -133,6 +136,9 @@
                 <div class="text-center">
                     <div style="padding-bottom: 30px;">
                         <button onclick="location.href='https://forms.gle/VWdqjNdJbxq9fd18A'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Solicite Pequenas Manutenções</button>
+                    </div>
+                    <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='#'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Tipos de Serviços Realizados pela BASE</button>
                     </div>
                 </div>
         </div>
