--- a/pastores-pe/contatos-empresas.html
+++ b/pastores-pe/contatos-empresas.html
@@ -106,7 +106,7 @@
                         <button onclick="location.href='https://wa.me/558188594044?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Amós Unividros</button>
                     </div>
                     <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='https://wa.me/558796680923?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Construtora Estrela da Noite (Serra Talhada)</button>
+                        <button onclick="location.href='https://wa.me/558796680923?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Estrela da Noite (Serra Talhada)</button>
                     </div>
                     <div style="padding-bottom: 30px;">
                         <button onclick="location.href='https://wa.me/5581991029427?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Gesso Pai e Filho</button>
