--- a/pr-propria-alugada.html
+++ b/pr-propria-alugada.html
@@ -3,7 +3,7 @@
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     
-    <title>Setor de Manutenção/PE</title>
+    <title>Processo BB - Solicitante</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8"/>
@@ -16,8 +16,9 @@
     <div class="container">
     <div class="col-xs-12">
             <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
-                <img class="backdrop linktree">
-                <h2 style="color: #ffffff; padding-top: 20px;">Bem-vindo(a)! Você é...</h2>
+                <img class="backdrop linktree-pr">
+                <h2 style="color: #ffffff; padding-top: 20px;">Olá, Pastor/Esposa!</h2>
+                <h4 style="color: #ffffff; padding-top: 10px;">Sua Igreja é...</h4>
             </div>
     </div>
     </div>
@@ -26,15 +27,14 @@
     <div class="col-xs-12">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='pr-propria-alugada.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Pastor / Esposa</button>
+                    <button onclick="location.href='pr-propria.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Própria</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='sac-pe.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Colaborador (SAC)</button>
-                </div>
+                    <button onclick="location.href='pr-alugada.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Alugada</button>
+                </div>                          
             </div>
     </div>
-    </div>
-
+    </div>    
     <!-- Head 2 -->
     <div class="container">
         <div class="col-xs-12">
@@ -48,10 +48,7 @@
         <div class="col-xs-12">
                 <div class="text-center">
                     <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='./fluxo-bb.html'" target="_blank" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Entenda o Fluxo do Processo BB</button>
-                    </div>
-                    <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='https://www.universal.org.br/codigodeetica/'" target="_blank" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Código de Ética - Universal</button>
+                        <button onclick="location.href='https://www.universal.org.br/codigodeetica/'" target="_blank" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Código de Ética - Universal</button>
                     </div>
                     <div style="padding-bottom: 30px;">
                         <button onclick="location.href='https://wa.me/558121014539'" target="_blank" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Central de Atendimento (SAC)</button>
