--- a/pr-propria.html
+++ b/pr-propria.html
@@ -3,7 +3,7 @@
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     
-    <title>Setor de Manutenção/PE</title>
+    <title>Processo BB - Solicitante</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8"/>
@@ -16,8 +16,9 @@
     <div class="container">
     <div class="col-xs-12">
             <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
-                <img class="backdrop linktree">
-                <h2 style="color: #ffffff; padding-top: 20px;">Bem-vindo(a)! Você é...</h2>
+                <img class="backdrop linktree-pr">
+                <h2 style="color: #ffffff; padding-top: 20px;">Qual tipo de serviço será solicitado?</h2>
+                <p style="color: #ffffff; padding-top: 10px;">Manutenções que envolvem contratação de empresas (ar-condicionado, vidraçaria, serralheira, marcenaria, elétrica, dedetização, jardinagem, extintores, impermeabilização, pintura, locação de caçambas,  forros e divisórias).</p>
             </div>
     </div>
     </div>
@@ -26,16 +27,29 @@
     <div class="col-xs-12">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='pr-propria-alugada.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Pastor / Esposa</button>
-                </div>
-                <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='sac-pe.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Colaborador (SAC)</button>
-                </div>
+                    <button onclick="location.href='pr-pe-2.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Clique aqui</button>
+                </div>                        
             </div>
     </div>
     </div>
-
-    <!-- Head 2 -->
+        <!-- Head 1 -->
+    <div class="container">
+        <div class="col-xs-12">
+                <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
+                    <p style="color: #ffffff; padding-top: 10px;">Manutenções que envolvam preventivas (elétrica, som, hidráulica, telhados), comunicação visual e pequenas manutenções - BASE/PE</p>
+                </div>
+        </div>
+        </div>
+        <div class="container">
+        <div class="col-xs-12">
+                <div class="text-center">
+                    <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://forms.gle/jXV5f3y8YZ6LmUa67'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Clique aqui</button>
+                    </div>                       
+                </div>
+        </div>
+        </div>    
+    <!-- Footer -->
     <div class="container">
         <div class="col-xs-12">
                 <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
@@ -48,10 +62,7 @@
         <div class="col-xs-12">
                 <div class="text-center">
                     <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='./fluxo-bb.html'" target="_blank" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Entenda o Fluxo do Processo BB</button>
-                    </div>
-                    <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='https://www.universal.org.br/codigodeetica/'" target="_blank" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Código de Ética - Universal</button>
+                        <button onclick="location.href='https://www.universal.org.br/codigodeetica/'" target="_blank" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Código de Ética - Universal</button>
                     </div>
                     <div style="padding-bottom: 30px;">
                         <button onclick="location.href='https://wa.me/558121014539'" target="_blank" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Central de Atendimento (SAC)</button>
